<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/LOGIN"
        android:textColor="@color/purple_700"
        android:textColorHighlight="@color/purple_500"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/button_forgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:clickable="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/amaranth"
        android:minHeight="48dp"
        android:text="@string/forgotpassword"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/amaranth"
        android:gravity="center|center_horizontal"
        android:minHeight="48dp"
        android:text="@string/dontHaveAccount"
        android:textColor="@color/purple_700"
        android:textColorHighlight="@color/purple_500"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/LOGIN" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_googSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
</LinearLayout>