<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="40dp"
                android:layout_weight="0.5"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_updateProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/updateProfile" />

                <Button
                    android:id="@+id/button_updatePic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/updatePicture" />

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/back" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:maxLength="32" />

        <EditText
            android:id="@+id/edit_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ems="10"
            android:hint="Major"
            android:inputType="textPersonName"
            android:maxLength="32" />

        <EditText
            android:id="@+id/edit_gradYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ems="10"
            android:hint="YOG"
            android:inputType="number"
            android:maxLength="4" />

        <TextView
            android:id="@+id/classes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="CLASSES" />

        <EditText
            android:id="@+id/edit_classes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Enter your classes here, separated by a comma."
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/aboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="ABOUT ME" />

        <EditText
            android:id="@+id/edit_aboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:focusable="auto"
            android:gravity="start|top"
            android:hint="Say something about yourself!"
            android:inputType="textMultiLine"
            android:maxLines="3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>